2001-11-02  Mike Kestner <mkestner@speakeasy.net>

	* codegen/defs-parse.pl : define-struct detection.  Partial ctor
	support.  Still need to deal with ctor signiature collisions.
	Refactored gen_method to share get_param_strings with ctors.

2001-10-30  Mike Kestner <mkestner@speakeasy.net>

	* codegen/defs-parse.pl : streamline mkdir stuff.  Prune the object
	list back to just Window for now. Suppress generation of the Prop
	get/set accessor methods.
	* codegen/gdk-types.defs : Updated the 2button/3button event types
	since I don't feel like automangling them now.
	* gdk/Event.cs : Killed the now redundant EventType declaration.
	* glib/Object.cs : Override the Equals and GetHashCode methods.

2001-10-25  Mike Kestner <mkestner@speakeasy.net>

	* glib/Object.cs : Added Get|SetProperty methods for Object
	properties.

2001-10-25  Mike Kestner <mkestner@speakeasy.net>

	* codegen/get-props-from-source.pl : Temporary (possibly) defs
	generator for props. Will probably kill this when the official
	defs support props.
	* codegen/defs-parse.pl : Added object-based aggregation of
	defs. Generate the class shells, methods, and props.
	* codegen/gdk-types.defs : ripped from pygtk.
	* codegen/gtk.defs : ripped from pygtk.
	* codegen/gtk-props.defs : some props defs.
	* codegen/makefile : add the new defs files.
	
2001-10-11  Mike Kestner <mkestner@speakeasy.net>

	* makefile : Add the codegen directory
	* codegen/defs-parse.pl : Moved here from topdir and updated to parse
	the new defs format for enums and flags.
	* codegen/gtk-types.defs : Borrowed from pygtk.
	* codegen/makefile : new
	* gtk/makefile : remove generation step.
	* gtk/gtk.defs : removed, now in codegen dir.

2001-10-07  Mike Kestner <mkestner@speakeasy.net>

	* gtk/Button.cs : Some nomenclature changes.  s/EmitClicked/Click, etc.
	We need a consistent way to deal with naming clashes in gtk's method
	and signal namespaces.  When clashes exist, events will be made past