@@ -1,0 +1,18 @@
+(define-struct Geometry
+  (in-module "Gdk")
+  (c-name "GdkGeometry")
+  (fields
+    '("gint" "min_width")
+    '("gint" "max_width")
+    '("gint" "min_height")
+    '("gint" "max_height")
+    '("gint" "base_width")
+    '("gint" "base_height")
+    '("gint" "width_inc")
+    '("gint" "height_inc")
+    '("gdouble" "min_aspect")
+    '("gdouble" "max_aspect")
+    '("GdkGravity" "win_gravity")
+  )
+)
+
